--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  host: 127.0.0.1
+  database: bbsdb
+  username: rails
+  password: <%= ENV['RAILS_2CH_SERVER_DATABASE_PASSWORD'] %>
   pool: 5
   timeout: 5000
 
@@ -13,8 +17,12 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  host: 127.0.0.1
+  database: bbsdb-test
+  username: rails
+  password: <%= ENV['RAILS_2CH_SERVER_DATABASE_PASSWORD'] %>
   pool: 5
   timeout: 5000
 
