--- a/test/fixtures/bbs_board_threads.yml
+++ b/test/fixtures/bbs_board_threads.yml
@@ -1,11 +1,31 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+---
+bbs_board_threads_001:
+  id: 1
+  bbs_board_id: 1
+  bbs_thread_id: 1
+  created_at: 2013-07-08 10:54:41.000000000 Z
+  updated_at: 2013-07-08 10:54:41.000000000 Z
+bbs_board_threads_002:
+  id: 2
+  bbs_board_id: 1
+  bbs_thread_id: 2
+  created_at: 2013-07-08 10:54:48.000000000 Z
+  updated_at: 2013-07-08 10:54:48.000000000 Z
+bbs_board_threads_003:
+  id: 3
+  bbs_board_id: 1
+  bbs_thread_id: 3
+  created_at: 2013-07-08 10:55:00.000000000 Z
+  updated_at: 2013-07-08 10:55:00.000000000 Z
+bbs_board_threads_004:
+  id: 4
+  bbs_board_id: 3
+  bbs_thread_id: 4
+  created_at: 2013-07-08 11:15:45.000000000 Z
+  updated_at: 2013-07-08 11:15:45.000000000 Z
+bbs_board_threads_005:
+  id: 5
+  bbs_board_id: 3
+  bbs_thread_id: 5
+  created_at: 2013-07-08 11:15:48.000000000 Z
+  updated_at: 2013-07-08 11:15:48.000000000 Z
