--- a/test/fixtures/bbs_thread_responses.yml
+++ b/test/fixtures/bbs_thread_responses.yml
@@ -1,11 +1,43 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+---
+bbs_thread_responses_001:
+  id: 1
+  bbs_thread_id: 1
+  bbs_response_id: 1
+  created_at: 2013-07-08 10:55:37.000000000 Z
+  updated_at: 2013-07-08 10:55:37.000000000 Z
+bbs_thread_responses_002:
+  id: 2
+  bbs_thread_id: 1
+  bbs_response_id: 2
+  created_at: 2013-07-08 10:55:57.000000000 Z
+  updated_at: 2013-07-08 10:55:57.000000000 Z
+bbs_thread_responses_003:
+  id: 3
+  bbs_thread_id: 2
+  bbs_response_id: 3
+  created_at: 2013-07-08 10:56:15.000000000 Z
+  updated_at: 2013-07-08 10:56:15.000000000 Z
+bbs_thread_responses_004:
+  id: 4
+  bbs_thread_id: 3
+  bbs_response_id: 4
+  created_at: 2013-07-08 10:56:35.000000000 Z
+  updated_at: 2013-07-08 10:56:35.000000000 Z
+bbs_thread_responses_005:
+  id: 5
+  bbs_thread_id: 1
+  bbs_response_id: 5
+  created_at: 2013-07-08 11:09:52.000000000 Z
+  updated_at: 2013-07-08 11:09:52.000000000 Z
+bbs_thread_responses_006:
+  id: 6
+  bbs_thread_id: 4
+  bbs_response_id: 6
+  created_at: 2013-07-08 11:16:02.000000000 Z
+  updated_at: 2013-07-08 11:16:02.000000000 Z
+bbs_thread_responses_007:
+  id: 7
+  bbs_thread_id: 5
+  bbs_response_id: 7
+  created_at: 2013-07-08 11:16:28.000000000 Z
+  updated_at: 2013-07-08 11:16:28.000000000 Z
