--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 before_script:
+  - echo "テスト"
   - export RAILS_2CH_SERVER_DATABASE_PASSWORD=`perl -le \'print map \{ ("a".."z", "A".."Z", 0..9)[rand 62] \} 1..253\'`
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('${RAILS_2CH_SERVER_DATABASE_PASSWORD}') WHERE user='rails';\nFLUSH PRIVILEGES;\n" | mysql -u root
+  - echo "CREATE DATABASE bbsdb;" | mysql -u root
+  - echo "CREATE DATABASE bbsdb-test;" | mysql -u root
 bundler_args: --without production
 script:
   - bundle exec rake spec
@@ -9,6 +12,7 @@ rvm:
 gemfile:
   - Gemfile
 install:
+  - echo ${RAILS_2CH_SERVER_DATABASE_PASSWORD}
   - bundle install
   - bundle exec rake db:schema:load RAILS_ENV=test
   - bundle exec rake db:fixtures:load RAILS_ENV=test
