--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+language: ruby
+rvm:
+  - 1.9.3
+  - 1.9.2
 before_script:
   - echo "TEST"
   - export RAILS_2CH_SERVER_DATABASE_PASSWORD=`perl -le \'print map \{ ("a".."z", "A".."Z", 0..9)[rand 62] \} 1..253\'`
@@ -6,13 +10,10 @@ before_script:
   - echo "CREATE DATABASE bbsdb-test;" | mysql -u root
 bundler_args: --without production
 script:
-  - bundle exec rake spec
-rvm:
-  - 1.9.3
-gemfile:
-  - Gemfile
-install:
   - echo ${RAILS_2CH_SERVER_DATABASE_PASSWORD}
   - bundle install
   - bundle exec rake db:schema:load RAILS_ENV=test
   - bundle exec rake db:fixtures:load RAILS_ENV=test
+  - bundle exec rake spec
+gemfile:
+  - Gemfile
