--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - 1.9.3
 before_script:
   - echo "TEST"
-  - export RAILS_2CH_SERVER_DATABASE_PASSWORD=`perl -le \'print map \{ ("a".."z", "A".."Z", 0..9)[rand 62] \} 1..253\'`
+  - export RAILS_2CH_SERVER_DATABASE_PASSWORD=`perl -le 'print map { ("a".."z", "A".."Z", 0..9)[rand 62] } 1..253'`
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('${RAILS_2CH_SERVER_DATABASE_PASSWORD}') WHERE user='rails';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - echo "CREATE DATABASE \`bbsdb\`;\n" | mysql -u root
   - echo "CREATE DATABASE \`bbsdb-test\`;\n" | mysql -u root
